--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         z-index: 1;
         top: 0;
         left: 0;
+        margin: 0;
         background-color: #111;
         padding-top: 20px;
+        overflow: scroll;
     }
 
     .nav-link{
